Update on Overleaf.

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -857,16 +857,17 @@ the strong dependency on the box size of the absorption spectra of Fig.~\ref{CO_
 For all these computational setups, the $S_{-2}$ sum rule is, on the contrary, perfectly satisfied.
 
 \section{Conclusions and Perspectives}
-In the analysis presented in this paper we have investigated how 
-computational results of linear-response calculations of molecular systems 
-might be compared among various formalisms.
-In particular, we have been interested in identifying the quantities that can
-be expressed in computational setups that are originally conceived for 
-\emph{localised} objects, which are the \emph{only} quantities that
-play a significant role in GS calculations.
+% In the analysis presented in this paper we have investigated how 
+% computational results of linear-response calculations of molecular systems 
+% might be compared among various formalisms.
+% In particular, we have been interested in identifying the quantities that can
+% be expressed in computational setups that are originally conceived for 
+% \emph{localised} objects, which are the \emph{only} quantities that
+% play a significant role in GS calculations.
 
-We have shown that all response densities for $\omega$ above the first IP
-\emph{have} to be expressed in terms of genuinely delocalized states, whereas below this threshold,
+By analysing the fundamental equations of LR calculations of molecules, we have shown that the response density for values of $\omega$ above the first IP
+\emph{have} to be expressed in terms of genuinely delocalized states. %, whereas 
+Below this threshold,
 under reasonable assumptions on the perturbing operators,
 the perturbed density operator is genuinely localized.
 In this localized regime, it is possible to achieve convergence of the numerical result
