--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -106,6 +106,19 @@
 \date{\today}
 
 \begin{abstract}
+A reliable procedure for the analysis of a system within the framework of the linear response should include
+the study of the conditions under which numerical convergence of the results can be achieved. 
+Such considerations are important not only for reproducibility of the results among different computer codes 
+employing diverse formalisms, but also in view of providing a deeper understanding on the impact of models' 
+approximations on the scientific outcomes of the simulation.
+
+We discuss these aspects in the context of linear response treatment of molecular systems. 
+By analysing simple case-studies with a highly complete numerical formalism, 
+we explore the interplay between locality of the perturbed wavefunctions and the 
+numerical convergence of observable quantities. We identify some convergence indicators and discuss under which regimes they might be employed. This will enable us to draw some considerations on the analytic structure of the linear susceptivity for open systems and on the potential convergence issues that might arise in a given computational setup.
+
+We believe that such discussion could provide useful considerations and perspectives for the design of a effective approaches for the study of molecular excitations in realistic conditions.
+
 We analyze how the fundamental equations which govern the linear response properties of a quantum system are influenced by the presence of open boundaries.
 In particular we focus our attention on linear-response (LR)-TDDFT calculation of molecular systems. We show that optical excitations of energy below the LR ionization potential 
 behave as observable, localized quantities, that can be computationally calculated with high precision, provided an adequate level of completeness.
