Update on Overleaf.

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -1213,7 +1213,7 @@ ans it has proven to represent precisely and explicitly system with Free boundar
 For Ground State results, the important parameters in the context of convergence of the calculations are the spacing of the wavelet grid and the size of the simulation domain: for bound-state like functions, convergence is achieved by reducing the grid spacing and increasing the simulation box size.
 Norm Conserving Pseudopotentials (PSP) of the HGH \cite{NLCCPSP} type are employed to remove the core electrons. Such PSP have proven to be able to provide all-electron accuracy for molecular systems.
 
-Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where 
+Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where another parameter is
 
 \subsection{$CO$}
 
