--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -1208,32 +1208,28 @@ eigenvalue $\Omega_a$ depends on the capability of the basis set $\ket{s}$ to fu
 \section{Computational details}
 The illustrative calculations presented in this paper are all KS-DFT calculations at the LDA level of theory. We employed the BigDFT code \cite{bigdft},
 which employs Daubechies Wavelets as computational basis set.
-Such basis present optimal features of in view of reproducibility of the results,
-ans it has proven to represent precisely and explicitly system with Free boundary conditions, without any basis set superposition error nor supercell aliasing.
+Such orthonormal basis present optimal features of in view of reproducibility of the results,
+and it has proven to represent precisely and explicitly system with Free as well as Periodic boundary conditions (BC), without any basis set superposition error nor supercell aliasing, for Free BC.
+
 For Ground State results, the important parameters in the context of convergence of the calculations are the spacing of the wavelet grid and the size of the simulation domain: for bound-state like functions, convergence is achieved by reducing the grid spacing and increasing the simulation box size.
 Norm Conserving Pseudopotentials (PSP) of the HGH \cite{NLCCPSP} type are employed to remove the core electrons. Such PSP have proven to be able to provide all-electron accuracy for molecular systems.
 
-Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where another parameter is
+Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where it is also important to include a sufficient number of unoccupied states in the transition operators. As pointed out in the text such states behave as plane waves: the features of wavelets enable us to represent localized and delocalized states on equal footing.
+For each size of the simulation domain, the number of unoccupied states used for building the Casida' eigenproblem has been increased up to convergence of the presented results.
 
 \subsection{$CO$}
+The molecule is oriented along the $z$ axis and the $z$-dimension of the box is equal to 11.5, 15.1 and 16.6 \AA.
+280 unoccupied states have been computed in each setup, which span an energy range of the empty KS orbitals of 30.7, 19.3 and 15.4 eV respectively. 
+Such energy values should not be confused with the excitations energy ranges reported in Figs.~\ref{co_spectrum} and \ref{CO_exc}. 
+Once again, such choices of unoccupied states ensures convergence in of excitations spectum in the presented range.
 
-Both GS and LR calculations for the $CO$ molecule are performed in three distinct computational setup that differs for the dimension of the computational
-domain. The molecule is oriented along the $z$ axis and the $z$-dimension of the box is equal to 11.5, 15.1 and 16.6 \AA.
+The DOS reported in figure \ref{CO_exc} are obtained by adding a smearing parameter of $8\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV. 
 
-Excitation energies and states are obtained through the explicit diagonalization of the Casida matrix. To this scope we have built a basis in the domain of $\op Q_0$ 
-by calculating the eigenvectors and associated energies of the empty virtual orbitals of $\hnot$. 280 states have been computed in each setup and the corresponding
-energy cutoff in the three simulation box is 30.7, 19.3 and 15.4 eV (energy cutoff decreases as the box increases due to the collapse of the unbound virtual states). 
+\subsection{Benzene}
 
-The DOS reported in figure \ref{CO_exc} are obtained by adding a complex shift of $8\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV. 
-
-\subsection{$C_6H_6$}
-
-Both GS and LR calculations for the $C_6H_6$ molecule are performed in three distinct computational setup that differs for the dimension of the computational
-domain. The molecule is oriented in the $xy$ plain and the $x$-dimension of the box is equal to 15.0, 18.2 and 19.7 \AA.
-
-Excitation energies and states are obtained through the explicit diagonalization of the Casida matrix. To this scope we have built a basis in the domain of $\op Q_0$ 
-by calculating the eigenvectors and associated energies of the empty virtual orbitals of $\hnot$. 220 states have been computed in each setup and the corresponding
-energy cutoff in the three simulation box is 16.9, 11.6 and 9.7 eV (energy cutoff decreases as the box increases due to the collapse of the unbound virtual states).  
+The molecule is oriented in the $xy$ plain and the $x$-dimension of the box is equal to 15.0, 18.2 and 19.7 \AA.
+220 states have been computed in each setup and the corresponding
+energy reange for the unoccupied statescutoff in the three simulation box is 16.9, 11.6 and 9.7 eV (energy cutoff decreases as the box increases due to the collapse of the unbound virtual states).  
 
 The DOS reported in figure \ref{C6H6_exc} are obtained by adding a complex shift of $1.3\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV. 
 
