Update on Overleaf.

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -1229,7 +1229,7 @@ The DOS reported in figure \ref{CO_exc} are obtained by adding a smearing parame
 
 The molecule is oriented in the $xy$ plain and the $x$-dimension of the box is equal to 15.0, 18.2 and 19.7 \AA.
 220 states have been computed in each setup and the corresponding
-energy reange for the unoccupied states is 16.9, 11.6 and 9.7 eV (energy cutoff decreases as the box increases due to the collapse of the unbound virtual states).  
+energy reange for the unoccupied states is 16.9, 11.6 and 9.7 eV.  
 
 The DOS reported in figure \ref{C6H6_exc} are obtained by adding a complex shift of $1.3\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV. 
 
