Update on Overleaf.

--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -202,3 +202,18 @@ number = {8},
 pages = {084104},
 year = {2016}
 }
+
+@article{DebElecField,
+  title = {Influence of an external electric field on the potential-energy surface of alkali-metal-decorated ${\mathrm{C}}_{60}$},
+  author = {De, Deb Sankar and Saha, Santanu and Genovese, Luigi and Goedecker, Stefan},
+  journal = {Phys. Rev. A},
+  volume = {97},
+  issue = {6},
+  pages = {063401},
+  numpages = {6},
+  year = {2018},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.97.063401},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.97.063401}
+}
